03/04/2005
----------
1. minor improvement on addressbook quick selection


03/03/2005
----------
1. fix a bug in blacklist/whitelist deletion which always deles the entry
   previous to the one user want to delete
   (reported by Dominic Lu, dominic.AT.dominic.idv.tw)
2. Czech language and template files translation update
   (thanks to Milan Kerslager, milan.kerslager.AT.pslib.cz)


03/02/2005
----------
1. support quick selection in addressbook (similar to the one in messagelist)


03/01/2005
----------
1. support *.ace archive list/decompression in webdisk
   (suggested by rs232, bellocarico.AT.hotmail.com)
2. new mirror site at Arad, Romania
   http://mirrors.arad.astral.ro/openwebmail/
   (thanks to Dani Radulescu, dani.radulescu.AT.astral.ro)
3. greatly improve the speed of composited advsearch
4. check if ~/mbox is INBOX before symlinking it to SAVED folder to avoid
   problem on platforms(eg: Cobalt Raq servers) using ~/mbox as mailspool
   (reported by tevike, csaba.AT.polyweb.no)


02/28/2005 (version 2.51)
----------
1. minor change to readmessage templates


02/27/2005
----------
1. guess a better contenttype in attachment downloading
   if attachment contenttype is application/octet-stream
2. include openwebmail.logrotate in misc/tools/logrotate/
   which is useful for systems supporting logrotate
   (thanks to Thomas Chung, tchung.AT.openwebmail.org)


02/25/2005
----------
1. change autologin default action from listmessage to listmessage_afterlogin,
   so 'autofetch pop3' and 'moving old message to saved folder' will be called
   in autologin


02/24/2005
----------
1. French language, template and htmlarea files translation minor update
   (thanks to Dominique, dominique.fournier.AT.grenoble.cnrs.fr)
2. fix a bug that saprefs always set headerattr to ALL when ruletype is header
   (reported by Yang Yao-Strong, ysyang.AT.green-computing.com)
3. Slovenian language and template files translation minor update
   add Slovenian letters to spellcheck