@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050304
+releasedate		20050306
 
 ##############################################################################
 # host dependent configuration
